Normalized first line after class declaration.